# ivc

./: .gitignore  .ivc.json  CLAUDE.md  Cargo.toml  README.md
.ivc/trees/: feature-phase2-github-pr.json
docs/: BACKFILL.md  CONCEPT.md  DATA_MODEL.md  PHASES.md
src/: config.rs  errors.rs  ivc_json.rs  main.rs
src/ai/: client.rs  extraction.rs  mod.rs
src/cli/: backfill.rs  commit.rs  init.rs  log.rs  mod.rs  pr.rs  push.rs
src/db/: commit_capture.rs  connection.rs  event.rs  intention.rs  mod.rs  schema.rs
src/git/: branch.rs  commit.rs  diff.rs  mod.rs  repo.rs
src/github/: client.rs  mod.rs  pr_description.rs
src/models/: commit_capture.rs  event.rs  intention.rs  mod.rs
