[package]
name = "ivc"
version = "0.1.0"
edition = "2021"
description = "Intention Version Control — version control for the why, not just the what"
license = "MIT"
repository = "https://github.com/user/ivc"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Git operations
git2 = "0.19"

# SurrealDB (embedded)
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv"] }

# HTTP client (Claude API)
reqwest = { version = "0.12", features = ["json"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# Ticket reference extraction
regex = "1"

[dev-dependencies]
tempfile = "3"
